# FORTH

./: FORTH.cabal  LICENSE  README.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: FORTH-0.1.0.0-inplace.conf  package.cache
src/: Eval.hs  Interpret.hs  Val.hs
test/: EvalSpec.hs  InterpretSpec.hs  ValSpec.hs
tests/: t1.4TH  t10.4TH  t11.4TH  t12.4TH  t12.out  t13.4TH  t13.out  t14.4TH  t14.out  t15.4TH  t15.out  t2.4TH  t3.4TH  t5.4TH  t5.out  t6.4TH  t7.4TH  t8.4TH  t9.out
