cabal-version:      3.0
name:               FORTH
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sashank Boppana
maintainer:         boppanasashank@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    exposed-modules:  Val
                    , Eval
                    , Interpret
    build-depends:    base ^>=4.17.2.1
                    , containers
                    , transformers
                    , mtl >= 2.2.2 
    hs-source-dirs:   src
    default-language: Haskell2010

executable FORTH
    main-is:          Main.hs
    other-modules:    Val
                    , Eval
                    , Interpret
    build-depends:    base ^>=4.17.2.1
                    , containers
                    , transformers
                    , mtl >= 2.2.2  
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010

test-suite FORTH-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    ValSpec
                    , EvalSpec
                    , InterpretSpec
    build-depends:    base ^>=4.17.2.1
                    , FORTH
                    , hspec
                    , containers
                    , transformers
                    , mtl >= 2.2.2  
    hs-source-dirs:   test
    default-language: Haskell2010
